Fix(styles): Ajusta tamanho do botão de voltar ao topo; Ajusta z-index do menu dropdown do header

--- a/frontend/src/components/Header/styles.module.scss
+++ b/frontend/src/components/Header/styles.module.scss
@@ -175,6 +175,7 @@
         height: 110px;
         background-color: var(--background-gray);
         border-radius: .4rem;
+        z-index: 1;
 
         ul {
             list-style: none;
