--- a/frontend/src/components/ui/BackToTop/styles.module.scss
+++ b/frontend/src/components/ui/BackToTop/styles.module.scss
@@ -1,42 +1,23 @@
 .backTopButton {
     position: fixed;
-    bottom: 2%;
-    right: 1%;
-    width: 100px;
-    height: 100px;
+    bottom: 5%;
+    right: 3%;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10;
+    z-index: 9;
     opacity: 0;
     transition: all .4s ease;
 
-    .buttonText {
+    .upIcon {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
         height: 100%;
-        text-align: center;
-
-        p {
-            font-family: var(--font-Anton);
-            color: var(--white);
-            text-shadow: 2px 2px 10px black;
-            text-transform: uppercase;
-            z-index: 1;
-        }
-    }
-
-    .upIcon {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        top: 0;
-        right: 0;
-        width: 100%;
         transition: all 4s;
 
         svg {
@@ -53,18 +34,9 @@
     }
 }
 
-@keyframes upMove {
-    0% {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(-20px);
+@media (max-width: 915px) {
+    .backTopButton {
+        bottom: 10%;
+        right: 5%;
     }
 }
